--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Spencer's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body id="mainpage">
     <ul>
-        <li><p><a href="recipes/steak.html"> Spencer's steak recipe link </a></p></li>
-        <li><p><a href="recipes/vodkapasta.html"> Spencer's vodka pasta recipe link </a></p></li>
-        <li><p><a href="recipes/brownies.html"> Spencer's brownie Recipe</a></p></li>
-     </ul>   
+        <li><p><a href="recipes/steak.html" target="_blank"> Spencer's steak recipe </a></p></li>
+        <li><p><a href="recipes/vodkapasta.html" target="_blank"> Spencer's vodka pasta recipe </a></p></li>
+        <li><p><a href="recipes/brownies.html" target="_blank"> Spencer's brownie recipe</a></p></li>
+        </ul>
+        <img src="https://i.imgflip.com/8tayhc.jpg?a479784" alt="steak" width="400" height="400"></p>
+        <p> Ready to Eat??? Click one of the recipes!</p>
  </body>
 </html>
