--- a/recipes/vodkapasta.html
+++ b/recipes/vodkapasta.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Spencer's Steak Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
-<body>
-        <h1><center> Spencer's Vodka Pasta Recipe </center></h1>
-        <center><img src="../images/Pasta-with-Vodka-Sauce-002.webp" alt="vodka pasta" width="400" height="400"></center>
-        <center><h2> Description</h2></center>
+<body id="vodkapasta">
+        <h1><center><div class="design1"> Spencer's Vodka Pasta Recipe </center></h1>
+        <center><img class= "img" src="../images/Pasta-with-Vodka-Sauce-002.webp" alt="vodka pasta" width="400" height="400"></center>
+        <center><h2><div class="design1"> Description</h2></center>
         <p> This dish is the easiest dish to make. It is really good to make to a family dinner, a cute date and if you want a quick meal after a long day. Follow the steps below to make a yummy bowl of pasta. <b>NO! YOU WILL NOT GET DRUNK OFF THIS PASTA!</b></p>
 
-        <h2><center> Ingredients</center></h2>
+        <h2><center><div class="design1"> Ingredients</center></h2>
 <ul>
     <li>Tomato Paste</li>
     <li>Vodka</li>
@@ -26,7 +27,7 @@
 
 </ul>
 
-        <h2><center> Steps</center></h2>
+        <h2><center><div class="design1"> Steps</center></h2>
 
 <ol>
     <li>Saute the minced onion and garlic with the olive oil and a pinch of salt.</li>
