--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
-<h1> Spencer's Recipe</h1>
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Spencer's Recipes</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>Title</title>
+        <link rel="stylesheet" href="Styles.css" />
     </head>
     <body id="mainpage">
-    <ul>
-        <li><p><a href="recipes/steak.html" target="_blank"> Spencer's steak recipe </a></p></li>
-        <li><p><a href="recipes/vodkapasta.html" target="_blank"> Spencer's vodka pasta recipe </a></p></li>
-        <li><p><a href="recipes/brownies.html" target="_blank"> Spencer's brownie recipe</a></p></li>
-        </ul>
-        <img src="https://i.imgflip.com/8tayhc.jpg?a479784" alt="steak" width="400" height="400"></p>
-        <p> Ready to Eat??? Click one of the recipes!</p>
- </body>
+        <h2>Hello!! Welcome to FORMULA FRENZY!</h2>
+        <p>Your goal is to complete two rounds of matching Chemical Names and their Formulas!!</p>
+        <p>Click on the two that you think matches! If you get them right they turn green. If not then try again!</p>
+        <p>Good Luck :)</p>
+
+        <button id="link"><a href="game.html"> START</a></button>
+        <img
+            src="https://static.vecteezy.com/system/resources/thumbnails/000/224/358/small_2x/chemistry-icons-vector.jpg"
+            alt="steak"
+            width="400"
+            height="400" />
+    </body>
 </html>
